# server

./: Cargo.toml  Dockerfile  README.md
src/: connection.rs  encryption.rs  lib.rs  main.rs  serializer.rs  store.rs
src/packets/: handshake.rs  login.rs
