[package]
name = "authentify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.6"
byteorder = "1.5.0"
cfb8 = "0.8.1"
minreq = {version = "2.11.0", features = ["https-rustls"] }
rand = "0.8.5"
rsa = { version = "0.9.2", features = ["serde"] }
rsa-der = "0.3.0"
rust-crypto = "0.2.36"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sha1 = "0.10.6"
tokio = { version = "1.33.0", features = ["full"] }
